<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/aboutTitleRl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <LinearLayout android:id="@+id/aboutBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_back">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/juxing_6" />
        </LinearLayout>

        <TextView
            android:id="@+id/aboutTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/about_title"
            android:textSize="15sp"
            android:textColor="@color/detailPercent"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grayBackground" />

    <RelativeLayout
        android:id="@+id/aboutDescRl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:background="@mipmap/d">
        <TextView
            android:id="@+id/configAboutFqbbTitle"
            android:layout_above="@+id/aboutCompanyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="28dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_appdesc"
            android:textSize="12sp"
            android:textColor="@color/darkBackground"/>

        <TextView
            android:id="@+id/aboutCompanyText"
            android:layout_above="@+id/aboutWebUrlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_centerHorizontal="true"
            android:text="@string/about_company"
            android:textSize="10sp"
            android:textColor="@color/darkBackground"/>

        <TextView
            android:id="@+id/aboutWebUrlText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:text="@string/about_weburl"
            android:textSize="10sp"
            android:textColor="@color/darkBackground"/>
    </RelativeLayout>

</LinearLayout>