<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/rightmenu_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/juxing_8"
        android:orientation="horizontal">

            <ImageView
                android:id="@+id/rightMenuLogo"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="23dp"
                android:layout_marginLeft="55dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/right_menu_logo"/>

            <TextView
                android:id="@+id/rightMenuLogoText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_toRightOf="@+id/rightMenuLogo"
                android:layout_marginTop="25dp"
                android:text="@string/right_menu_logo1"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:layout_marginLeft="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/rightMenuLogoText1"
                android:layout_marginTop="35dp"
                android:text="@string/right_menu_logo2"
                android:textSize="10sp"
                android:layout_gravity="center"
                android:textColor="@color/main_bg"
                android:layout_marginLeft="5dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rmMyTaobaoLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="78dp"
        android:layout_marginRight="59dp"
        android:clickable="true"
        android:background="@drawable/right_menu_select0">
        <ImageView
            android:id="@+id/wangwangImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:layout_marginBottom="13dp"
            android:layout_marginLeft="20dp"
            android:src="@mipmap/t_c"/>

        <TextView
            android:layout_toRightOf="@+id/wangwangImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="11dp"
            android:layout_marginLeft="10dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_mytaobao" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/white" />

    <!-- 首页 -->
    <RelativeLayout
        android:id="@+id/rmFirstpageLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">

        <ImageView
            android:id="@+id/rm_firstpage_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="17dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/s_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_firstpage_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_firstpage" />
    </RelativeLayout>

    <!-- 查询订单 -->
    <RelativeLayout
        android:id="@+id/rmMyOrderLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">
        <ImageView
            android:id="@+id/rm_myorder_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/d_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_myorder_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_myorder" />
    </RelativeLayout>

    <!-- 提现 -->
    <RelativeLayout
        android:id="@+id/rmTixianLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">
        <ImageView
            android:id="@+id/rm_tixian_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/tx_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_tixian_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_tixian" />
    </RelativeLayout>

    <!-- 集分宝 -->
    <!--<RelativeLayout
        android:id="@+id/rmMyjfbLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">
        <ImageView
            android:id="@+id/rm_myjfb_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/jfb_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_myjfb_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_myjfb" />
    </RelativeLayout>-->

    <!-- 使用帮助 -->
    <RelativeLayout
        android:id="@+id/rmHelpLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">
        <ImageView
            android:id="@+id/rm_help_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/sb_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_help_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_help" />
    </RelativeLayout>

    <!-- 设置 -->
    <RelativeLayout
        android:id="@+id/rmConfigLo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/right_menu_select">
        <ImageView
            android:id="@+id/rm_config_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="78dp"
            android:src="@mipmap/sz_c"/>

        <TextView
            android:layout_toRightOf="@+id/rm_config_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="17dp"
            android:layout_marginLeft="7dp"
            android:textSize="15sp"
            android:textColor="@color/rightMenuText"
            android:text="@string/right_menu_config" />
    </RelativeLayout>

</LinearLayout>