<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">

    <RelativeLayout
        android:id="@+id/configTitleRl"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/white" >

        <LinearLayout android:id="@+id/configBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:background="@drawable/selector_back">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/juxing_6" />
        </LinearLayout>

        <TextView
            android:id="@+id/configTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/config_title"
            android:textSize="15sp"
            android:textColor="@color/detailPercent"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@color/grayBackground" />

    <!-- 自动返利 -->
    <!--<LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/configFanliRl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white" >
            <TextView
                android:id="@+id/configFanliTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/config_fanli"
                android:textSize="15sp"
                android:textColor="@color/rightMenuText"/>

            <CheckBox
                android:id="@+id/configFanliRadio"
                style="@style/rg_btn_style"
                android:checked="true"
                android:drawableTop="@drawable/bt_config_radio"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:text="@string/config_fanli_desc"
            android:textSize="12sp"
            android:textColor="@color/darkBackground"/>
    </LinearLayout>-->

    <View
        android:layout_width="match_parent"
        android:layout_height="13dp"
        android:background="@color/grayBackground" />

    <!-- 检查更新和关于返钱宝宝-->
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <RelativeLayout
            android:id="@+id/configUpdateRl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/right_menu_select">
            <TextView
                android:id="@+id/configUpdateTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="20dp"
                android:text="@string/config_update"
                android:textSize="15sp"
                android:textColor="@color/rightMenuText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/jx_9" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/grayBackground" />

        <RelativeLayout
            android:id="@+id/configAboutFqbbRl"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/right_menu_select" >
            <TextView
                android:id="@+id/configAboutFqbbTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="13dp"
                android:layout_marginLeft="20dp"
                android:text="@string/config_about"
                android:textSize="15sp"
                android:textColor="@color/rightMenuText"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:src="@mipmap/jx_9" />
        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/grayBackground" />

</LinearLayout>